<resources>
    <string name="app_name">RashmiRamanScheduleApp</string>

    <!-- Event name for terms  -->
    <string name="event_terms">Terms</string>

    <!-- Event name for courses  -->
    <string name="event_courses">Courses</string>

    <!-- Event name for assessments  -->
    <string name="event_assessments">Assessments</string>

    <!-- Hint for title in editor activity -->
    <string name="title_hint">Title</string>

    <!-- Hint for start time and date in editor activity -->
    <string name="time_hint">Time</string>
    <string name="date_hint">Date</string>

    <string name="start">Start:</string>
    <string name="end">End:</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="title_activity_editor_new_assessment">Add a assessment</string>
    <string name="title_activity_editor_new_course">Add a course</string>
    <string name="title_activity_editor_new_term">Add a term</string>
    <string name="title_activity_editor_new_mentor">Add a mentor</string>

    <string name="title_activity_detailed_assessment">Detailed assessment</string>

    <string name="title_activity_detailed_course">Detailed course</string>

    <string name="title_activity_detailed_term">Detailed term</string>\

    <string name="title_activity_detailed_mentor">Detailed term</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_menu_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_menu_delete">Delete</string>

    <string name="action_menu_redo">Change</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="msg_insert_assessment_successful">Assessment inserted</string>
    <string name="msg_insert_course_successful">Course inserted</string>
    <string name="msg_insert_mentor_successful">Mentor inserted</string>
    <string name="msg_insert_term_successful">Term inserted</string>

    <string name="msg_update_assessment_successful">Assessment updated</string>
    <string name="msg_update_course_successful">Course updated</string>
    <string name="msg_update_mentor_successful">Mentor updated</string>
    <string name="msg_update_term_successful">Term updated</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="error_insert_assessment_failed">Error with inserting assessment</string>
    <string name="error_insert_course_failed">Error with inserting course</string>
    <string name="error_insert_mentor_failed">Error with inserting mentor</string>
    <string name="error_insert_term_failed">Error with inserting term</string>

    <string name="error_update_course_failed">Error with inserting course</string>
    <string name="error_update_assessment_failed">Error with updating assessment</string>
    <string name="error_update_mentor_failed">Error with updating mentor</string>
    <string name="error_update_term_failed">Error with updating term</string>

    <string name="error_enter_title">You should enter a title</string>
    <string name="error_enter_name">You should enter a name</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text_assessment">Get started by adding an assessment</string>

    <string name="title_activity_editor_edit_assessment">Edit assessment</string>
    <string name="title_activity_editor_edit_course">Edit course</string>
    <string name="title_activity_editor_edit_mentor">Edit mentor</string>
    <string name="title_activity_editor_edit_term">Edit term</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="msg_unsaved_changes_dialog">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="action_discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="action_keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="msg_delete_successful"> deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="error_delete_failed">Error with deleting</string>

    <string name="tab_course_info">Info about course</string>
    <string name="tab_course_assessments">Assessments of the course</string>
    <string name="tab_course_mentors">Mentors of the course</string>

    <string name="tab_term_info">Info about term</string>
    <string name="tab_term_courses">Courses of the term</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="msg_delete_assessment_dialog">Delete this assessment?</string>
    <string name="msg_delete_course_dialog">Delete this course?</string>
    <string name="msg_delete_term_dialog">Delete this term?</string>
    <string name="msg_delete_mentor_dialog">Delete this mentor?</string>

    <string name="msg_delete_all">Delete all items?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="action_dialog_delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="action_dialog_cancel">Cancel</string>
    <string name="error_delete_assessment_failed">Error with deleting assessment</string>
    <string name="error_delete_mentor_failed">Error with deleting mentor</string>
    <string name="msg_delete_assessment_successful">Assessment Deleted</string>
    <string name="msg_delete_mentor_successful">Mentor Deleted</string>

    <string name="msg_spinner_courses">For the course:</string>
    <string name="msg_spinner_terms">For the Term:</string>
    <string name="msg_spinner_status">Status:</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <string name="status_in_progress">In progress</string>
    <string name="status_completed">Completed</string>
    <string name="status_dropped">Dropped</string>
    <string name="status_plan_to_take">Plan to take</string>
    <string name="status_unknown">Unknown</string>

    <string name="note">Note</string>

    <string name="name_hint">Name</string>
    <string name="name_text">Name:</string>
    <string name="phone_hint">Phone</string>
    <string name="phone_text">Phone:</string>
    <string name="call">Call</string>
    <string name="write">Write</string>
    <string name="email_hint">E-mail</string>
    <string name="email_text">E-mail:</string>

    <string name="not_assigned">Not assigned</string>

    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>

    <string name="settings_terms_key">check_box_preference_terms</string>
    <string name="settings_courses_key">check_box_preference_courses</string>
    <string name="settings_assessments_key">check_box_preference_assessments</string>
</resources>
