<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fon">

    <!-- Terms event -->
    <TextView
        android:id="@+id/text_activity_home_terms"
        style="@style/HomeActivityEventStyle"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/event_terms" />


    <!-- Courses event -->
    <TextView
        android:id="@+id/text_activity_home_courses"
        style="@style/HomeActivityEventStyle"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/event_courses" />


    <!-- Assessments event -->
    <TextView
        android:id="@+id/text_activity_home_assessments"
        style="@style/HomeActivityEventStyle"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/event_assessments" />


</LinearLayout>