<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorCourseActivity">

    <!-- Title field -->
    <EditText
        android:id="@+id/edit_course_title"
        style="@style/EditorFieldStyle"
        android:hint="@string/title_hint"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Start time field -->
        <EditText
            android:id="@+id/edit_course_start_date"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_hint"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

        <!-- End time field -->
        <EditText
            android:id="@+id/edit_course_start_time"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_hint"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Start time field -->
        <EditText
            android:id="@+id/edit_course_end_date"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_hint"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

        <!-- End time field -->
        <EditText
            android:id="@+id/edit_course_end_time"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_hint"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_spinner_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/msg_spinner_status" />

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_spinner_for_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/msg_spinner_terms" />

        <Spinner
            android:id="@+id/spinner_for_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint= "@string/note"/>

</LinearLayout>