<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorCourseActivity">

    <EditText
        android:id="@+id/edit_name"
        style="@style/EditorFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLength="12" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/EditorFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textCapWords" />


</LinearLayout>
