<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorCourseActivity">

    <TextView
        android:id="@+id/text_temp1"
        style="@style/ListActivityItemStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/name_text" />

    <TextView
        android:id="@+id/text_name"
        style="@style/ListActivityItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="Fedor"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_temp1"
        app:layout_constraintBaseline_toBaselineOf="@id/text_temp1" />


    <TextView
        android:id="@+id/text_temp2"
        style="@style/ListActivityItemStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:text="@string/phone_text"
        app:layout_constraintTop_toBottomOf="@id/text_temp1"/>

    <TextView
        android:id="@+id/text_phone"
        style="@style/ListActivityItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="spread"
        android:focusable="true"
        android:text="892222222"
        app:layout_constraintStart_toEndOf="@+id/text_temp2"
        app:layout_constraintRight_toLeftOf="@id/button_call"
        app:layout_constraintBaseline_toBaselineOf="@id/text_temp2"  />

    <Button
        android:id="@+id/button_call"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_phone"
        app:layout_constraintBaseline_toBaselineOf="@id/text_temp2" />


    <TextView
        android:id="@+id/text_temp3"
        style="@style/ListActivityItemStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:text="@string/email_text"
        app:layout_constraintTop_toBottomOf="@id/text_temp2"/>

    <TextView
        android:id="@+id/text_email"
        style="@style/ListActivityItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="spread"
        android:focusable="true"
        android:text="sansara.develop@gmail.com"
        app:layout_constraintStart_toEndOf="@+id/text_temp3"
        app:layout_constraintRight_toLeftOf="@id/button_write"
        app:layout_constraintBaseline_toBaselineOf="@id/text_temp3"  />

    <Button
        android:id="@+id/button_write"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_email"
        app:layout_constraintBaseline_toBaselineOf="@id/text_temp3" />



</android.support.constraint.ConstraintLayout>
